tests/baselines/reference/regexp-first-char-no-paragraph-separator.errors.txt
regexp-first-char-no-paragraph-separator.ts(28,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
regexp-first-char-no-paragraph-separator.ts(28,2): error TS1161: Unterminated regular expression literal.
regexp-first-char-no-paragraph-separator.ts(29,2): error TS1109: Expression expected.


==== regexp-first-char-no-paragraph-separator.ts (3 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionNonTerminator
    info: |
      RegularExpressionBody ::
        RegularExpressionFirstChar RegularExpressionChars
    
      RegularExpressionChars ::
        [empty]
        RegularExpressionChars RegularExpressionChar
    
      RegularExpressionFirstChar ::
        RegularExpressionNonTerminator but not one of * or \ or / or [
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
    description: >
      The first character of a regular expression may not be a <PS>
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    / /
    ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
     
!!! error TS1161: Unterminated regular expression literal.
    
    
!!! error TS1109: Expression expected.
    /*
    There is a <PS> between the two / characters
    */
    